objects/PriceList__c.object
<CustomObject>    
    <description>Represents a price list that contains the list of products the organization sells</description>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account associated with the price list</description>
        <inlineHelpText>ID of the account associated with the price list</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Price Lists</relationshipLabel>
        <relationshipName>PriceLists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the price list is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BasedOnAdjustmentAmount__c</fullName>
        <description>The adjustment amount.to apply to the based on price</description>
        <inlineHelpText>The adjustment amount.to apply to the based on price</inlineHelpText>
        <label>Based On Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BasedOnAdjustmentType__c</fullName>
        <description>The adjustment type to apply to the based on price</description>
        <inlineHelpText>The adjustment type to apply to the based on price</inlineHelpText>
        <label>Based On Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>% Discount</fullName>
                </value>
                <value>
                    <fullName>Discount Amount</fullName>
                </value>
                <value>
                    <fullName>% Markup</fullName>
                </value>
                <value>
                    <fullName>Markup Amount</fullName>
                </value>
                <value>
                    <fullName>Price Factor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BasedOnPriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the price list this is based on</description>
        <label>Based On Price List</label>
        <referenceTo>PriceList__c</referenceTo>
        <relationshipLabel>Derived Price Lists</relationshipLabel>
        <relationshipName>DerivedPriceLists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractNumber__c</fullName>
        <description>The contract number associated with the price list.</description>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>    
    <fields>
        <fullName>Description__c</fullName>
        <description>The description of the price list.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DisableBasedOnCurrencyAdjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether currency adjustment is disabled when the currency of the price list and the based on price list are different in a multi-currency enabled org</description>
        <inlineHelpText>Indicates whether currency adjustment is disabled when the currency of the price list and the based on price list are different in a multi-currency enabled org</inlineHelpText>
        <label>Disable Based On Currency Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <description>The price list effective date. The price list becomes effective on this date and time.</description>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <description>The price list expiration date. The price list becomes ineffective after this date and time.</description>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GuidePage__c</fullName>
        <description>The name of the guide page to use for Help Me Choose (All Categories)</description>
        <label>Guide Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The price list type</description>
        <inlineHelpText>The price list type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RFP Price List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>ExpirationDate__c</columns>
        <columns>Active__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Price List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Lists</pluralLabel>    
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>